assets/css/style.css
/* ... */
.product-grid .showcase-title {
  color: var(--sonic-silver);
  font-size: var(--fs-8);
  font-weight: var(--weight-300);
  text-transform: capitalize;
  letter-spacing: 1px;
  margin-bottom: 10px;
  transition: var(--transition-timing);
}

.product-grid .showcase-title:hover {
  color: var(--eerie-black);
}

.product-grid .showcase-rating {
  display: flex;
  color: var(--sandy-brown);
  margin-bottom: 10px;
}

.product-grid .price-box {
  display: flex;
  gap: 10px;
  font-size: var(--fs-7);
  color: var(--eerie-black);
  margin-bottom: 10px;
}

.product-grid .price {
  font-weight: var(--weight-700);
}

.product-grid del {
  color: var(--sonic-silver);
}

/*-----------------------------------*\
  #TESTIMONIAL
\*-----------------------------------*/

.testimonials-box {
  margin-bottom: 50px;
}

.testimonial-card {
  padding: 30px 20px;
  border: 1px solid var(--cultured);
  border-radius: var(--border-radius-md);
  text-align: center;
  margin-bottom: 25px;
}

.testimonial-banner {
  margin: auto;
  margin-bottom: 20px;
  border-radius: 50%;
}

.testimonial-name {
  font-weight: var(--weight-700);
  text-transform: uppercase;
  color: var(--sonic-silver);
  margin-bottom: 5px;
}

.testimonial-title {
  color: var(--eerie-black);
  font-size: var(--fs-7);
  margin-bottom: 15px;
}

.quotation-img {
  margin: auto;
  margin-bottom: 10px;
}

.testimonial-desc {
  max-width: 70%;
  margin: auto;
  color: var(--bittersweet);
  font-size: var(--fs-7);
}

/*-----------------------------------*\
  #CTA
\*-----------------------------------*/

.cta-container {
  position: relative;
  aspect-ratio: 5 / 6;
  border-radius: var(--border-radius-md);
  overflow: hidden;
  margin-bottom: 25px;
}

.cta-banner {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.cta-content {
  background: hsla(0, 0%, 100%, 0.7);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: fit-content;
  padding: 15px 20px;
  text-align: center;
  border-radius: var(--border-radius-sm);
}

.cta-content .discount {
  background: var(--eerie-black);
  color: var(--white);
  font-size: var(--fs-11);
  font-weight: var(--weight-600);
  text-transform: uppercase;
  width: max-content;
  margin: auto;
  padding: 0 5px;
  border-radius: var(--border-radius-sm);
  margin-bottom: 5px;
}

.cta-title {
  color: var(--onyx);
  font-size: var(--fs-5);
  text-transform: capitalize;
  margin-bottom: 5px;
}

.cta-text {
  color: var(--sonic-silver);
  font-size: var(--fs-7);
  margin-bottom: 5px;
}

.cta-btn {
  font-size: var(--fs-9);
  color: var(--sonic-silver);
  text-transform: uppercase;
  font-weight: var(--weight-700);
  margin: auto;
}

/*-----------------------------------*\
  #SERVICE
\*-----------------------------------*/

.service-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 30px;
  padding: 30px 15px;
  border: 1px solid var(--cultured);
  border-radius: var(--border-radius-md);
}

.service-item {
  min-width: 190px;
  display: flex;
  align-items: center;
  gap: 15px;
}

.service-icon {
  font-size: 35px;
  color: var(--salmon-pink);
  transition: var(--transition-timing);
}

.service-icon ion-icon {
  --ionicon-stroke-width: 25px;
}

.service-item:hover .service-icon {
  color: var(--eerie-black);
}

.service-title {
  color: var(--eerie-black);
  font-size: var(--fs-7);
  font-weight: var(--weight-600);
  text-transform: capitalize;
  margin-bottom: 5px;
}

.service-desc {
  color: var(--bittersweet);
  font-size: var(--fs-9);
}

/*-----------------------------------*\
  #BLOG
\*-----------------------------------*/

.blog {
  margin-bottom: 30px;
}

.blog-container {
  display: flex;
  align-items: flex-start;
  gap: 15px;
  overflow-x: auto;
  overscroll-behavior-inline: contain;
  scroll-snap-type: inline mandatory;
}

.blog-card {
  min-width: 100%;
  scroll-snap-align: start;
}

.blog-banner {
  width: 100%;
  border-radius: var(--border-radius-md);
  margin-bottom: 20px;
}

.blog-category {
  width: max-content;
  color: var(--salmon-pink);
  font-size: var(--fs-8);
}

.blog-title {
  color: var(--eerie-black);
  font-size: var(--fs-5);
  font-weight: var(--weight-600);
  line-height: 1.4;
  margin-bottom: 5px;
  transition: var(--transition-timing);
}

.blog-title:hover {
  color: var(--salmon-pink);
}

.blog-meta {
  color: var(--sonic-silver);
  font-size: var(--fs-7);
}

.blog-meta cite {
  font-style: normal;
  color: var(--davys-gray);
}

/*-----------------------------------*\
  #FOOTER
\*-----------------------------------*/

footer {
  background: var(--white);
  padding: 30px 0;
}

.footer-category {
  margin-bottom: 30px;
  padding-bottom: 15px;
  border-bottom: 1px solid var(--onyx);
}

.footer-category-title {
  color: var(--salmon-pink);
  font-size: var(--fs-6);
  font-weight: var(--weight-600);
  text-transform: uppercase;
  margin-bottom: 15px;
}

.footer-category-box {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  column-gap: 20px;
  row-gap: 3px;
  margin-bottom: 15px;
}

.category-box-title {
  color: var(--spanish-gray);
  font-size: var(--fs-8);
  font-weight: var(--weight-600);
  text-transform: uppercase;
}

.footer-category-link {
  position: relative;
  color: var(--sonic-silver);
  font-size: var(--fs-7);
  text-transform: capitalize;
  transition: var(--transition-timing);
}

.footer-category-link:hover {
  color: var(--spanish-gray);
}

.footer-category-link:not(:last-child)::after {
  position: absolute;
  content: "";
  top: 3px;
  right: -10px;
  background: var(--sonic-silver);
  width: 1px;
  height: 15px;
}

/**
 * footer nav 
 */

.footer-nav {
  border-bottom: 1px solid var(--onyx);
  padding-bottom: 30px;
  margin-bottom: 30px;
}

.footer-nav-list:not(:last-child) {
  margin-bottom: 20px;
}
/* ... */

